index page update

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <meta property="og:title" content="Siddharth Uchhadiya | Web Designer & Developer" />
     <meta property="og:description" content="Portfolio of Siddharth Uchhadiya - Crafting Digital Experiences That Inspire" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/public/s.jpg" />
+    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@siddharth_dev" />
-    <meta name="twitter:image" content="/public/s.jpg" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
